# salesforce-console

./: .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  salesforce.rs  state.rs
src/components/: ClipboardCopySvg.vue  ErrorAlert.vue  Login.vue  LogoutSvg.vue  MacLogoSvg.vue  SalesforceSvg.vue  Spinner.vue  TrashSvg.vue  WindowsLogoSvg.vue
src/types/: SfLogin.d.ts
